<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.3"
            android:orientation="vertical"
            android:paddingStart="30dp">

            <TextView
                android:id="@+id/item_task_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tasktext_name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/item_datetime_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datetimetext_name"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>

        <Button
            android:id="@+id/item_deleat_task_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="0.8"
            android:text="@string/finish"
            android:textSize="15sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
