<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewtaskActivity">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:focusableInTouchMode="true">

        <Space
            android:layout_width="match_parent"
            android:layout_height="87dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/newadd_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/under_line"
                android:text="@string/newaddtext_name"
                android:textColor="@color/black"
                android:textSize="100px"
                android:textStyle="bold" />

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/task_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tasktext_name"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/pale_blue"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/task_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:translationZ="1dp"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textSize="30dp" />
            </LinearLayout>

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/datetime_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/datetimetext_name"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/pale_blue"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/date_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:translationZ="1dp"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:nextFocusDown="@id/mainlayout"
                    android:inputType="date"
                    android:text="0000/00/00"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="30dp" />

                <EditText
                    android:id="@+id/time_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:translationZ="1dp"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:nextFocusDown="@id/mainlayout"
                    android:inputType="time"
                    android:text="23:59"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="30dp" />
            </LinearLayout>

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/return_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/returntext_name"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/pale_blue"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/returnnum_input"
                    style="?attr/spinnerDropDownItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:translationZ="1dp"
                    android:ellipsize="marquee"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30dp" />

                <Spinner
                    android:id="@+id/return_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:translationZ="1dp"
                    android:imeOptions="actionDone"
                    android:textColor="@color/black"
                    android:textSize="30dp" />

            </LinearLayout>

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <Button
                android:id="@+id/addbutton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/addbutton_name"
                android:textSize="20dp" />

            <Space
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>